[package]
name = "watcher_proto"
version = "0.1.0"
authors = ["ray <vjoke@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.4.3"
protobuf = "2.6"
futures = "0.1.25"

[build-dependencies]
build_helpers = { path = "../../common/build_helpers" }